RESOLVED FIXED312237
[Mixed Content] MixedContentChecker::shouldBlockRequest() doesn't need the document
https://bugs.webkit.org/show_bug.cgi?id=312237
Summary [Mixed Content] MixedContentChecker::shouldBlockRequest() doesn't need the do...
rupin
Reported 2026-04-13 23:39:42 PDT
[Mixed Content] MixedContentChecker::shouldBlockRequest() does not need Document
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-13 23:39:49 PDT
rupin
Comment 2 2026-04-13 23:41:49 PDT
EWS
Comment 3 2026-04-14 13:42:51 PDT
Committed 311228@main (d995144a1f1c): <https://commits.webkit.org/311228@main> Reviewed commits have been landed. Closing PR #62710 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.