[Mixed Content] MixedContentChecker::shouldBlockRequest() doesn't need the document https://bugs.webkit.org/show_bug.cgi?id=312237 rdar://174719372

Reviewed by Basuke Suzuki.

There's no need to get the document from the frame since we don't use it.

* Source/WebCore/loader/MixedContentChecker.cpp:
(WebCore::MixedContentChecker::shouldBlockRequest):

Canonical link: https://commits.webkit.org/311228@main